<resources>
    <string name="app_name">CafeOk</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="delivery">Delivery</string>
    <string name="coffee">Coffee</string>
    <string name="account">Account</string>
    <string name="card">Card</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_morning">Good Morning Mihail!</string>
    <string name="search">Search</string>
    <string name="clear_all">Clear all</string>
    <string name="sum_total">Sum total:</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="skip">Skip</string>
    <string name="reset_email">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>

</resources>