<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottomMenuAccount"
        android:icon="@drawable/acc"
        android:title="@string/account"
        app:showAsAction="ifRoom"
        >
    </item>

    <item
        android:id="@+id/bottomMenuCard"
        android:icon="@drawable/shop"
        android:title="@string/card"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/bottomMenuHome"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/bottomMenuCoffee"
        android:icon="@drawable/coffee"
        android:title="@string/coffee"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/bottomMenuFavorite"
        android:icon="@drawable/favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom">
    </item>

</menu>