<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.loginUI.SignInActivity"
    android:background="@color/beige">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/coffepng"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="150dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/section_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/gray"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:hintTextColor="@color/gray"
                app:startIconTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/section_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/gray"
                app:boxStrokeWidthFocused="4dp"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/holo_red_light"
                app:hintTextColor="@color/gray"
                app:startIconTint="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reset_pass"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tab"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center">

            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tab"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

            </androidx.appcompat.widget.AppCompatButton>

        </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>